# sis-extras

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml  test_streamlit.yml
src/sis_extras/: connection.py  formatting.py
tests/: example_app_formatting.py
