[project]
name = "sis-extras"
version = "0.1.4"
description = "Python package to make it easy to develop beautiful, performant streamlit-in-snowflake apps"
authors = [{ name = "Zachary Blackwood", email = "zblackwo@gmail.com" }]
dependencies = [
    "streamlit",
    "snowflake-snowpark-python",
    "plotly",
    "numpy>1.24.4",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/blackary/sis-extras"
Tracker = "https://github.com/blackary/sis-extras/issues"

[project.license]
text = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
ignore = ["B008", "ISC001", "E501", "W191"]
line-length = 88
select = [
    "B",
    "E",
    "F",
    "W",
    "I",
    "N",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ERA",
    "PLC",
    "RUF",
    "ARG",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.5"]
